# NTTest

./: CMakeLists.txt  readme.md
Client/: clientMain.cpp
Common/: Common.hpp
Server/: Core.hpp  server.hpp  serverMain.cpp  session.hpp  user.hpp
