CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
SET(CMAKE_BUILD_TYPE "Release")

PROJECT(ClienServerEcn)

FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(Threads REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

SET(CMAKE_CXX_STANDARD 17)

ADD_EXECUTABLE(Client ./Client/ClientMain.cpp) 
TARGET_LINK_LIBRARIES(Client PRIVATE Threads::Threads ${Boost_LIBRARIES})

ADD_EXECUTABLE(Server ./Server/ServerMain.cpp)
TARGET_LINK_LIBRARIES(Server PRIVATE Threads::Threads ${Boost_LIBRARIES})
